<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:text="@string/settings_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/settings_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_launcher"
        android:text="@string/settings_name" 
        android:gravity="left|center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/map_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/friends_in_map"
        android:onClick="openFriendsList" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/avalaible_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/set_avalaible"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <CheckBox
            android:id="@+id/avalaible_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/avalaible_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/avalaible_hint" />

    <Button
        android:id="@+id/blocked_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/blocked_friends"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:onClick="openBlackList" />

    <TextView
        android:id="@+id/blocked_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/blocked_hint" />

    <Button
        android:id="@+id/invite_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/invite_friends"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:onClick="openInviteView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gps_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/gps"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>
        <CheckBox
            android:id="@+id/gps_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
    <TextView
        android:id="@+id/gps_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/gps_hint" />

</LinearLayout>