<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fest_festival_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/messagge_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_message" />

    <EditText
        android:id="@+id/message_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/meet_me"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/message_write_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/message_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/messages_array">
        </Spinner>
        <Button
            android:id="@+id/message_ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_ok_text" />
    </LinearLayout>

</LinearLayout>