<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/info_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extras_title"
            android:layout_gravity="left"
            android:onClick="leftButtonClick" />

        <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/extras_info"
            android:gravity="center_horizontal|center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <Button
        android:id="@+id/info_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_dates"
        android:gravity="left|center_vertical"
        android:onClick="showDates"
        android:textAppearance="?android:attr/textAppearanceMedium"  />

    <Button
        android:id="@+id/info_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_tickets"
        android:gravity="left|center_vertical"
        android:onClick="showTickets"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/info_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_location"
        android:gravity="left|center_vertical"
        android:onClick="showLocation"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</LinearLayout>