<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/blacklist_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false" />

    <ImageView
        android:id="@+id/blacklist_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/friend_list_img" />

    <TextView
        android:id="@+id/blacklist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_list_name" />
	<TextView
        android:id="@+id/blacklist_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unblock"
        android:enabled="false"/>
</LinearLayout>