<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/banner_superior"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/info_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/extras_title"
            android:onClick="leftButtonClick"
            android:src="@drawable/boton_volver" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/info_cancel"
            android:contentDescription="@string/extras_title"
            android:src="@drawable/franja_vertical_50" />

        <ImageView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/extras_info"
            android:src="@drawable/titulo_info" />
    </RelativeLayout>
        <Button
            android:id="@+id/info_tickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="5dp"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/info_tickets"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/festivals"
            android:src="@drawable/franja_horizontal_oscura" />
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	<TextView
	    android:id="@+id/info_tickets_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="15dp"
	    android:gravity="center_horizontal"
	    />
	</ScrollView>
</LinearLayout>